@@ -16,7 +16,8 @@ https://www.w3schools.com/tags/tag_button.asp
 https://www.w3schools.com/tags/tag_textarea.asp
 23. Textarea: Add maxlength
 24. Textarea. Add wrap
-25.
+25. Select: Constructor tests for errors.
+26.
 
 Applied
 =======
