@@ -2,6 +2,7 @@
  - Add default value for boolean values in Input.
  - Add doc for Input.
  - Add tests for Input.
+ - Add tests for Select.
 
 0.09 2024-01-06T19:35:12+01:00
  - Add check for CSS class.
